[gd_scene load_steps=2 format=3 uid="uid://ddh58vrskxidi"]

[ext_resource type="Script" path="res://inventory/inventory_ui_slot.gd" id="1_xf4ai"]

[node name="InventoryUISlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1076.0
offset_bottom = -572.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xf4ai")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 76.0
offset_bottom = 76.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]
z_index = 1
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="CenterContainer/Panel"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -5.0
offset_right = 14.0
offset_bottom = 23.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="CenterContainer/Panel"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -5.0
offset_top = -48.0
offset_right = 14.0
offset_bottom = -25.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.85098, 0.666667, 0, 1)
text = "1"
horizontal_alignment = 2
